--- a/index.html
+++ b/index.html
@@ -236,6 +236,14 @@
     </li>
   </template>
 
+  <script src="js/utils.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/users-photos.js"></script>
+  <script src="js/users-comments.js"></script>
+  <script src="js/big-picture.js"></script>
+  <script src="js/picture-effects.js"></script>
+  <script src="js/validation-hashtag.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/main.js"></script>
 
 </body>
