--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
   <script src="js/users-comments.js"></script>
   <script src="js/big-picture.js"></script>
   <script src="js/picture-effects.js"></script>
+  <script src="js/pin-moving.js"></script>
   <script src="js/validation-hashtag.js"></script>
   <script src="js/form.js"></script>
   <script src="js/main.js"></script>
