--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
   </template>
 
   <script src="js/utils.js"></script>
+  <script src="js/status-messages.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
   <script src="js/users-photos.js"></script>
