--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
   </template>
 
   <script src="js/utils.js"></script>
+  <script src="js/sorting.js"></script>
   <script src="js/status-messages.js"></script>
   <script src="js/backend.js"></script>
-  <script src="js/data.js"></script>
   <script src="js/users-photos.js"></script>
   <script src="js/users-comments.js"></script>
   <script src="js/big-picture.js"></script>
